# MyLittleLanguage

./: .gitignore  .hlint.yaml  MyLittleLanguage.cabal  README.md  package.yaml  stack.yaml
app/: Compile.hs  CompileRuntime.hs  Main.hs  Misc.hs  Repl.hs  Utils.hs
app/Main/: Compile.hs  CompileRuntime.hs  Repl.hs  Utils.hs
examples/LPC810_blinky/: Main.mll  Makefile
examples/arduino_blinky/: Makefile  arduino_blinky.mll
examples/native_example/: Main.mll  Makefile  native_example.mll
rts/: builtins.c
runtime/: runtime_arduino.ll  runtime_native.c  runtime_native.ll
src/: Builtins.hs  Codegen.hs  Compile.hs  Lex.hs  Lexer.hs  Main.hs  Misc.hs  Parse.hs  Parser.hs  Rename.hs  RuntimeSystem.hs  Syntax.hs  Top.hs  Typecheck.hs  Utils.hs
src/Codegen/: Builtins.hs  Codegen.hs  CodegenFunction.hs  Lib.hs  Utils.hs
src/Parse/: Lex.hs  Parse.hs  Syntax.hs  Utils.hs
src/Rename/: Rename.hs  Syntax.hs  Utils.hs
src/Typecheck/: Syntax.hs  Typecheck.hs  Utils.hs
test/: LPC810_blinky.mll  Spec.hs  example.mll  makefile
