name:                MyLittleLanguage
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/MyLittleLanguage#readme
license:             BSD3
license-file:        LICENSE
author:              Jannik Theiß
maintainer:          jnkthss.dev@icloud.com
copyright:           2017 Jannik Theiß
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable MyLittleLanguage
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , bytestring
                     , containers
                     , haskeline
                     , parsec
                     , llvm-general-pure
                     , llvm-general
  
  other-modules:       Misc, Syntax, Lexer, Parser, Codegen, Compile
